gnome-control-center (1:40.0-1ubuntu3) UNRELEASED; urgency=medium

  [ Gunnar Hjalmarsson ]
  * Adapts-the-region-capplet-and-the-language-chooser-in-the.patch:
    - Revert the "Fix locales updates" commit
    - Drop update_region() call with NULL argument

  [ Hui Wang ]
  * d/p/u/Fix-volume-adjustment-failure-on-volume-slider.patch:
    - Can't adjust the output volume via volume-slider after changing
      the current output-device. (LP: #1938747)

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Fri, 16 Jul 2021 21:43:33 +0200

gnome-control-center (1:40.0-1ubuntu2) impish; urgency=medium

  * debian/ubuntu-logo-icon.png,
    debian/gnome-control-center-data.install,
    d/p/d/info-overview-Use-the-Vendor-logo-prominently.patch:
    - use a vendor logo icon which is available in Ubuntu (lp: #1934564)

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 09 Jul 2021 13:10:17 +0200

gnome-control-center (1:40.0-1ubuntu1) impish; urgency=medium

  * Merge with debian
  * debian/patches: Refresh and rebase
  * debian/patches: Use debian-gnome standard unnumered names.
    Having numbered patches makes it only harder to maintain and rebase, so
    let's just follow the gnome-team rules and use proper names for them as
    gbp pq generates.
    If you don't use it, well do :).
  * debian/patches: Cherry-pick upstream proposed patches to handle cases
    that we were handlig by reverting 3.38 changes.
  * d/p/Provide-an-api-for-the-installation-of-language-pack.patch: Drop.
    This was needed to handle language pack installation, but it's something
    that is obsolete now.
  * d/p/Adapts-the-region-capplet-and-the-language-chooser-in-the.patch:
    - Looks like it needed to be ordered to be rebased proplerly, so adapt it
      to new code hiding the "more" button from ui file.
    - Fix locales updates.
    Ensure that when user language changes we set back the region to the
    default per the chosen language
  * debian/patches: Move patches into the debian namespace.