@@ -1,3 +1,35 @@
+From: Hui Wang <hui.wang@canonical.com>
+Date: Thu, 29 Jul 2021 17:08:08 +0800
+Subject: sound: update the volume-slider after getting a valid stream
+
+In the ubuntu 20.04, we met an issue about the output volume-slider
+on the machine with the legacy HDA audio driver, the output device
+is the Speaker first (analog-stereo pa sink), then we connect a hdmi
+monitor, the HDMI audio is in the output combo-box, we select the
+hdmi audio (hdmi-stereo pa sink) from the combo-box, the hdmi audio
+becomes the active output device now, we adjust the output volume from
+the volume-slider, the slider UI is changed, but the output sound
+is not changed with the UI.
+
+The root cause is when the speaker is active, the pulseaudio only
+keeps the analog-stereo sink, the sink hdmi-stereo is unlinked, when
+users select the hdmi audio from UI, the pulseaudio will unlink
+analo-stereo sink and create hdmi-stereo sink, but before hdmi-stereo
+is created, the output_device_changed_cb() is called and
+gvc_mixer_control_get_stream_from_device() returns a NULL since the
+hdmi-stereo sink is not created yet in the pulseaudio. Because stream
+is NULL, the output_volume_slider->stream is NULL, users can't change
+the output volume via the volume-slider.
+
+To fix it, we add a output_volume_slider->stream check in the
+device_update_cb(), if it is NULL, get the stream and set it to
+volume-slider. In this function, the sink hdmi-stereo is created
+already, so the stream is not NULL. And this change also applies to
+input as well.
+
+Origin: https://gitlab.gnome.org/GNOME/gnome-control-center/-/commit/0f18a662
+Bug-Ubuntu: https://launchpad.net/bugs/1938747
+
 Index: gnome-control-center-40.0/panels/sound/cc-sound-panel.c
 ===================================================================
 --- gnome-control-center-40.0.orig/panels/sound/cc-sound-panel.c
