@@ -4,6 +4,8 @@ gnome-control-center (1:40.0-1ubuntu3) UNRELEASED; urgency=medium
   * Adapts-the-region-capplet-and-the-language-chooser-in-the.patch:
     - Revert the "Fix locales updates" commit
     - Drop update_region() call with NULL argument
+  * d/p/u/Fix-volume-adjustment-failure-on-volume-slider.patch:
+    - Added patch headers
 
   [ Hui Wang ]
   * d/p/u/Fix-volume-adjustment-failure-on-volume-slider.patch:
